# etf-trend-rp-vt

./: .gitignore  Dockerfile  Makefile  algo.py  docker-compose.ci.yml  docker-compose.local.yml  docker-compose.server.yml  docker-compose.yml  helpers.py  pyproject.toml  readme.md  trend_state.json
.github/workflows/: build-and-push.yml  ephemeral-daily-run.yml
backtest/: 200-day-ma-grid-search.ipynb  ma-loopback-gridsearch.ipynb  portfolio_simulation.ipynb  trend-risk-parity-volatility.ipynb  trend_strategy.ipynb
backtest/strategy/: 200-day-ma-duel-filter-momentum.ipynb
infra/do-functions/: .env.example  project.yml
scheduler/: crontab  run.sh
supervisor/: supervisord.conf
tests/: test_algo.py  test_helpers.py
