[tool.poetry]
name = "etf-trend-rp-vt"
version = "0.1.0"
description = ""
authors = ["Moses McCall <mosesmc52@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.1.1"
xtermcolor = "^1.3"
boto3 = "^1.40.16"
pandas = "^2.3.2"
alpaca-trade-api = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
