[tool.poetry]
name = "etf-trend-rp-vt"
version = "0.1.0"
description = ""
authors = ["Moses McCall <mosesmc52@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.1.1"
xtermcolor = "^1.3"
boto3 = "^1.40.16"
pandas = "^2.3.2"
pandas-market-calendars = "^5.1.1"
alpaca-py = "^0.43.2"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4.6"
matplotlib = "^3.10.5"
yfinance = "^1.0"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
